<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/secondaryColor"
        android:paddingHorizontal="@dimen/spacing_default"
        tools:context=".Home">

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateTint="@color/primaryColor"
            android:translationZ="1dp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_search"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_default"
            android:layout_marginEnd="@dimen/spacing_large"
            android:hint="Código de operación"
            app:boxBackgroundColor="@color/white"
            app:boxCornerRadiusBottomStart="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_search"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                android:maxLines="1"
                android:paddingEnd="@dimen/spacing_extra_large" />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageButton
            android:id="@+id/btn_search"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:background="@drawable/bg_search"
            android:src="@drawable/ic_search"
            android:tint="@color/white"
            app:layout_constraintBottom_toBottomOf="@id/til_search"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/til_search" />

        <TextView
            android:id="@+id/tv_filters_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/card_type_filter"
            app:layout_constraintTop_toBottomOf="@id/btn_search" />

        <LinearLayout
            android:id="@+id/ll_filter_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/tv_filters_title">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chip_group"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_1"
                    style="@style/Widget.MaterialComponents.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tag="0"
                    android:text="@string/visa"
                    android:textColor="@color/white"
                    app:checkedIconTint="@color/white"
                    app:chipSurfaceColor="@color/primaryColor" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_2"
                    style="@style/ChipCustomStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tag="1"
                    android:text="@string/mastercard"
                    app:checkedIconTint="@color/white"
                    app:chipSurfaceColor="@color/primaryColor" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_3"
                    style="@style/Widget.MaterialComponents.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tag="2"
                    android:text="@string/cash"
                    android:textColor="@color/white"
                    app:checkedIconTint="@color/white"
                    app:chipSurfaceColor="@color/primaryColor" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_4"
                    style="@style/Widget.MaterialComponents.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tag="3"
                    android:text="@string/clave"
                    android:textColor="@color/white"
                    app:checkedIconTint="@color/white"
                    app:chipSurfaceColor="@color/primaryColor" />
            </com.google.android.material.chip.ChipGroup>

            <ImageButton
                android:id="@+id/btn_sort_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:padding="@dimen/spacing_default"
                android:src="@drawable/ic_sort" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/spacing_default"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:paddingBottom="110dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_filter_container"
            tools:listitem="@layout/list_item_transaction" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>